12-05-2018/Lab-26
// CONTROL STATEMENTS

LOOPING:
	WHILE: EXECUTES A TARGET STATEMENTS AS LONG AS A GIVEN CONDITION IS TRUE

SYTNAX:
	WHILE EXPRESSION:
		STATEMENTS(S)

#!/usr/bin/python

count=0
while (count<9):
	print('The count will be',count)
	count=count+1
print("Leave it")

O/P:

./test.py 
('The count will be', 0)
('The count will be', 1)
('The count will be', 2)
('The count will be', 3)
('The count will be', 4)
('The count will be', 5)
('The count will be', 6)
('The count will be', 7)
('The count will be', 8)
Leave it

OR

// INFINITE LOOP

#!/usr/bin/python

count=1

while count==1:
	a=input('Enter a no: ')
	print('You have entered: ',a)
print("Leave it")

O/P:

./test.py 
Enter a no: 12
('You have entered: ', 12)
Enter a no: 13
('You have entered: ', 13)
Enter a no: 23
('You have entered: ', 23)
Enter a no: 0
('You have entered: ', 0)
Enter a no: -2
('You have entered: ', -2)
Enter a no: 1 2
Traceback (most recent call last):
  File "./test.py", line 8, in <module>
    a=input('Enter a no: ')
  File "<string>", line 1
    1 2
      ^
SyntaxError: unexpected EOF while parsing

OR

// ELSE STATEMENT WITH LOOPS

cat test.py 
#!/usr/bin/python

count=0
while count<4:
	print(count,'is less than 4')
	count=count+1
else:
	print(count,'is not less than 4')

O/P:

./test.py 
(0, 'is less than 4')
(1, 'is less than 4')
(2, 'is less than 4')
(3, 'is less than 4')
(4, 'is not less than 4')

OR:

// INFINITE LOOP EXAMPLE

cat test.py 
#!/usr/bin/python

flag=1
while (flag):print('Given flag is true!!!')
print('Leave it!!')

O/P:

Given flag is true!!!
Given flag is true!!!
Given flag is true!!!
Given flag is true!!!
Given flag is true!!!
Given flag is true!!!
……….
……..
…….

CTRL+C
